# aiohttp_learning

./: Makefile  main.py  pyproject.toml
app/crm/: models.py  routes.py  schemes.py  views.py
app/store/crm/: accessor.py
app/web/: app.py  config.py  middlewares.py  schemes.py  utils.py
config/: config.yaml
